--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -20,6 +20,11 @@ jobs:
             os: windows-2019,
             build-type: "Release"
           }
+          - {
+            name: "Windows Server 2022 [Release]",
+            os: windows-2022,
+            build-type: "Release"
+          }
     steps:
     - uses: actions/checkout@v3
       with:
