Acquire configuration search parameter test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ include(CTest)
 set(UNIT_TESTS
     test_configuration_property
     test_configuration_property_path
+    test_configuration_search_parameter
     test_searchable_configuration
 )
 
